Update 'snafvxxm0-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c11820b1fb.apom.p3.openshiftapps.com/rhtap/rhtap-qe:1413fb6a364a0ef1f88c17dfed4b12b7c9185ca6@sha256:7a2fe55772ca18600f996b98d9db1149962380e4416443f40fc877e2470f3970

--- a/components/snafvxxm0-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/snafvxxm0-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: snafvxxm0-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c11820b1fb.apom.p3.openshiftapps.com/rhtap/rhtap-qe:1413fb6a364a0ef1f88c17dfed4b12b7c9185ca6@sha256:7a2fe55772ca18600f996b98d9db1149962380e4416443f40fc877e2470f3970
+          name: container-image
